Fix port-0 JDWP detection, defer thread kill, add demo E2E test
- Fix JdiHelper to detect the actual JDWP port when address=...:0 is
  used by querying the Attach API (sun.jdwp.listenerAddress). Falls back
  to argument parsing for fixed ports.

- Defer thread termination in ThreadFreezer until after the snapshot
  handler completes AND vm.dispose() finishes. This prevents VM_DEAD
  errors when freezing the main thread.

- Update README: FreezeDemo runs on main thread, add -g to javac,
  add jdk.attach module and allowAttachSelf flag to java commands.

- Add ReadmeDemoIT that compiles and runs the exact Quick Start demo
  from the README to catch stale instructions.

https://claude.ai/code/session_01JVaEev424m8qmDwGq8FATE